// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly a legend 1`] = `
<span
  className=""
>
  <ChartLegendIcon
    className="text-middle spacer-right line-chart-legend line-chart-legend-2"
  />
  <span
    className="text-middle"
  >
    Bugs
  </span>
</span>
`;

exports[`should render correctly an actionable legend 1`] = `
<span
  className="project-activity-graph-legend-actionable myclass"
>
  <ChartLegendIcon
    className="text-middle spacer-right line-chart-legend line-chart-legend-1"
  />
  <span
    className="text-middle"
  >
    Foo
  </span>
  <ButtonIcon
    className="button-tiny spacer-left text-middle"
    color="#999"
    onClick={[Function]}
  >
    <ClearIcon
      size={12}
    />
  </ButtonIcon>
</span>
`;

exports[`should render correctly legends with warning 1`] = `
<span
  className="myclass"
>
  <AlertWarnIcon
    className="spacer-right"
  />
  <span
    className="text-middle"
  >
    Foo
  </span>
</span>
`;
